# BeatJam

./: README.md
gimp/: beat_border.xcf  keyboard_beat.xcf  mouse_beat.xcf
proj.cmake/: BeatJam  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  res.xml
proj.cmake/beatscore/: example.beatj  test.beatj
proj.cmake/oxygine-framework/: Makefile  cmake_install.cmake
src/: beat.cpp  beat.h  beatborder.cpp  beatborder.h  beatjam_constants.h  beatscoreparser.cpp  beatscoreparser.h  beatstage.cpp  beatstage.h  entry_point.cpp  example.cpp  example.h  keyboard_listener.cpp  keyboard_listener.h  pianobar.cpp  pianobar.h  pianokey.cpp  pianokey.h
tools/: generate_beatscore.py
